// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getConfig datasource with env var - ignoreEnvVarErrors 1`] = `
{
  "datasources": [
    {
      "activeProvider": "postgresql",
      "name": "db",
      "provider": "postgresql",
      "url": {
        "fromEnvVar": "SOMETHING-SOMETHING-1234",
        "value": null,
      },
    },
  ],
  "generators": [],
  "warnings": [],
}
`;

exports[`getConfig datasource with env var 1`] = `
{
  "datasources": [
    {
      "activeProvider": "postgresql",
      "name": "db",
      "provider": "postgresql",
      "url": {
        "fromEnvVar": "TEST_POSTGRES_URI_FOR_DATASOURCE",
        "value": "postgres://user:password@something:5432/db",
      },
    },
  ],
  "generators": [],
  "warnings": [],
}
`;

exports[`getConfig empty config 1`] = `
{
  "datasources": [
    {
      "activeProvider": "sqlite",
      "name": "db",
      "provider": "sqlite",
      "url": {
        "fromEnvVar": null,
        "value": "file:../hello.db",
      },
    },
  ],
  "generators": [],
  "warnings": [],
}
`;

exports[`getConfig with generator and datasource 1`] = `
{
  "datasources": [
    {
      "activeProvider": "sqlite",
      "name": "db",
      "provider": "sqlite",
      "url": {
        "fromEnvVar": null,
        "value": "file:dev.db",
      },
    },
  ],
  "generators": [
    {
      "binaryTargets": [
        {
          "fromEnvVar": null,
          "value": "native",
        },
      ],
      "config": {},
      "name": "gen",
      "output": null,
      "previewFeatures": [],
      "provider": {
        "fromEnvVar": null,
        "value": "fancy-provider",
      },
    },
  ],
  "warnings": [],
}
`;
